terminado realizar test

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Puedo manejar?</title>
+    <title>¿Puedo manejar?</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -29,7 +29,7 @@
             </select>
         </label>
         <hr>
-        <label>Realiza el test de alcoholemia: <br>
+        <label id="test-alcoholemia">Realiza el test de alcoholemia: <br>
             <input type="button" value="Realizar test" id="input-test">
         </label>
         <hr>
@@ -43,7 +43,7 @@
             </select>
         </label>
         <hr>
-        <input type="submit" value="Enviar datos">
+        <input type="submit" value="Enviar datos" id="input-submit">
     </div>
 
     <script src="js/script.js"></script>
