--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
             <input type="date" name="fecha" id="input-date"></label>
         <hr>
         <label>¿Que vehiculo estas manejando? <br>
-            <select name="vehiculo" id="input-vehiculo">
-                <option value="1">Automovil</option>
-                <option value="2">Motocicleta</option>
-                <option value="3">Camion</option>
-                <option value="4">Otro</option>
+            <select name="vehiculo" id="input-vehiculo" onchange="select()">
+                <option value="0">Automovil</option>
+                <option value="1">Motocicleta</option>
+                <option value="2">Camion</option>
+                <option value="3">Otro</option>
             </select>
         </label>
         <hr>
